--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <h1>Remy Antony Espinoza Estrada</h1>
   <p>Welcome to my website!</p>
-  <img src="miAuto.jpge">
+  <img src="miAuto.jpg">
 </body>
  
 </html>
